# REC_database_cleaner

./: .gitignore  MANIFEST.in  README.md  Racial Equity Collective of Illinois Mapping Survey.xlsx  app.py  cleaner.py  forefront_database_dictionary.csv  pyproject.toml  setup.py
app/: REC_database_cleaner.py  requirements.txt
archive/: REC_database_cleaner_test.py  REC_database_cleaning.py  REC_descriptives.py  forefront_database_cleaning.py  forefront_database_dictionary.xlsx
archive/input/: Racial+Equity+Collective+of+Illinois+Mapping+Survey_March+1,+2023_10.22.xlsx
archive/output/: Racial+Equity+Collective+of+Illinois+Mapping+Survey_March+1,+2023_10.22_cleaned.xlsx  Racial+Equity+Collective+of+Illinois+Mapping+Survey_March+8,+2023_12.43.xlsx
output/: Racial+Equity+Collective+of+Illinois+Mapping+Survey_March+1,+2023_10.22.xlsx
scripts/: __main__.py  cleaner.py  constants.py  qualtrics_database_dictionary.csv  sm_cols.csv  sm_database_dictionary.csv  sm_headers.csv  utils.py
static/: style.css
templates/: index.html
